# pet-QRB-back

./: .gitignore  README.md  alembic.ini  docker-compose.yml  dockerfile  env.example  main.py  pyproject.toml  requirements.txt  run_all.py
app/: abi.json  config.py  main.py  models.py  poller.py  tariffs.py
app/api/: __init__.py  check_payment.py  monitoring.py  payments.py  qr_code.py  tariffs.py  users.py  utils.py
app/application/: blockchain_checker.py  container.py  models.py  payment_api.py  payment_manager.py  payment_processor.py  qr_generator.py  tariffs.py  users.py
app/application/events/: models.py  types.py
app/application/services/: blockchain_checker.py  blockchain_listener.py  payment_manager.py  payment_processor.py  qr_generator.py  tariffs.py  users.py
app/infrastructure/: blockchain.py  blockchain_listener.py  container.py  logger_config.py  models.py
app/infrastructure/db/migrations/: env.py
app/infrastructure/db/postgres/: database.py  init_db.py  migration.py  repositories.py  schemas.py
app/infrastructure/db/redis/: redis.py  repositories.py
app/infrastructure/kafka/: client.py  consumer.py  producer.py
app/infrastructure/middleware/: __init__.py  exceptions.py  logger.py
app/presentation/api/: __init__.py  models.py  payments.py  tariffs.py  users.py
app/presentation/middleware/: __init__.py  exceptions.py  logger.py  logger_config.py
app/services/: blockchain_checker.py  container.py  health.py  payment_api.py  payment_manager.py  payment_processor.py  qr_generator.py  tariffs.py  users.py
frontend/: .env  README.md  config.py  pyproject.toml
frontend/bot/: bot.py  keyboards.py  models.py
k8s/: deployment.yaml  init-db.yaml  postgres.yaml  redis.yaml
scripts/: create_db.py  migrate.py  prestart.sh  start-main.sh  start-poller.sh
(+9 files in other folders)
