[project]
name = "payment-accept-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "Krivopusk.mitya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "aiogram (>=3.21.0,<4.0.0)",
    "aiohttp (>=3.12.14,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
